# Financial-daily-report

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test.py
config/: prompts.py  settings.py
docs/: langchain-workflow.md  usage.md
docs/plans/: 2026-03-11-financial-daily-report-design.md  2026-03-11-financial-daily-report-implementation.md  2026-03-12-langchain-refactor-design.md  2026-03-12-langchain-refactor.md
docs/superpowers/plans/: 2025-03-12-news-information-extraction.md
docs/superpowers/specs/: 2025-03-12-news-information-extraction-design.md
src/: main.py
src/collectors/: __init__.py  base.py  market_collector.py  news_collector.py
src/generators/: llm_client.py  report_gen.py
src/processors/: analyzer.py  cleaner.py
src/rag/: embeddings.py  retriever.py  vector_store.py
src/scheduler/: cron_scheduler.py
src/storage/: database.py
src/utils/: exceptions.py  logger.py  retry.py
src/workflow/: __init__.py  graph.py  nodes.py  state.py
tests/: test_config.py  test_workflow_graph.py  test_workflow_integration.py  test_workflow_nodes.py  test_workflow_state.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_analyzer.py  test_cleaner.py  test_database.py  test_embeddings.py  test_llm_analyze.py  test_market_collector.py  test_news_collector.py  test_report_gen.py  test_retriever.py  test_retry.py  test_scheduler.py  test_vector_store.py
